@@ -1,6 +1,8 @@
 Release history for Comment-Spell-Check
 
 {{$NEXT}}
+ [Internals]
+ - Make sure the auto-selected spell checker can in fact spell check words before finalising the selection.
 
 0.001001 2014-09-30T02:50:57Z
  [Tests]
